--- a/client/package.json
+++ b/client/package.json
@@ -12,8 +12,10 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "dotenv": "^8.2.0",
+    "moment": "^2.29.1",
     "register-service-worker": "^1.7.1",
     "vue": "^3.0.0",
+    "vue-moment": "^4.1.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0",
     "vuex-persistedstate": "^4.0.0-beta.3"
