--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,4 @@
-MONGOURI= ""
-JWT_SECRET= "ghjeuyhfhjdh"
+MONGO_URL=mongodb://localhost:27017/instagram
+JWT_SECRET= secret
+PORT=5000
+NODE_ENV=development
