production at last

--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
-MONGO_URL=mongodb://localhost:27017/instagram
+MONGO_URL=mongodb+srv://wastech:WASiu369@cluster0.dyeyd.mongodb.net/instagram?retryWrites=true&w=majority
 JWT_SECRET= secret
 PORT=5000
-NODE_ENV=development
+NODE_ENV=production
