--- a/server/.env
+++ b/server/.env
@@ -2,3 +2,4 @@ MONGO_URL=mongodb+srv://wastech:WASiu369@cluster0.dyeyd.mongodb.net/instagram?re
 JWT_SECRET= secret
 PORT=5000
 NODE_ENV=production
+LOCAL_URL=http://localhost:8080
