--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "vue": "^3.0.0",
     "vue-moment": "^4.1.0",
     "vue-router": "^4.0.0-0",
+    "vue3-lazy": "^1.0.0-alpha.1",
     "vuex": "^4.0.0-0",
     "vuex-persistedstate": "^4.0.0-beta.3"
   },
